(library
 (name Inquire_test)
 (public_name inquire.test)
 (ocamlopt_flags -open Base -linkall -g -w -9)
 (libraries base alcotest inquire.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries base alcotest inquire.test)
 (ocamlopt_flags -open Base)
 (modules test_runner))

(include_subdirs unqualified)

(alias
 (name runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))
